--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Press+Start+2P&display=swap");
 
+/* ======MAIN====== */
+
 .main {
+  background-color: #f9fafb;
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
 }
+/* ======LEFT====== */
 .left {
   background-image: url("../img/background.jpg");
   background-size: cover;
@@ -17,7 +21,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  margin-top: 200px;
+  margin-top: 35%;
   background-color: rgba(0, 0, 0, 0.411);
 }
 .logo > p {
@@ -35,6 +39,75 @@
   font-size: 16px;
   color: #cacaca;
 }
+/* ======RIGHT====== */
 .right {
+  display: flex;
+  flex-direction: column;
+  margin-left: 3%;
+  justify-content: center;
   width: 60%;
+}
+
+.middle {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
+  height: auto;
+}
+.top > p,
+.middle > p {
+  font-size: 28px;
+  font-style: italic;
+  font-weight: bold;
+}
+form {
+  margin-top: 2%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10%;
+}
+div > label {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+}
+input {
+  height: 2.5rem;
+  width: 20rem;
+  border: 1px solid #e5e7eb;
+  border-radius: 5px;
+  font-size: inherit;
+  outline: none;
+}
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"],
+:focus {
+  box-shadow: 1px 1px 3px gray;
+  border: 1px solid blue;
+}
+.bottom {
+  margin-top: 10%;
+}
+.btn {
+  display: flex;
+  flex-direction: column;
+}
+button {
+  width: 12rem;
+  height: 3rem;
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  background-color: #596d48;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 1.5rem;
+  margin-bottom: 3%;
 }
